--- a/App/src/asset/styles.css
+++ b/App/src/asset/styles.css
@@ -94,7 +94,7 @@ button:hover {
   padding: 6px;
 }
 
-.d-flex {
+.footer-body {
   display: flex;
   justify-content: center;
   align-items: center;
